[package]
name = "particle_filter"
version = "0.1.0"
edition = "2021"
authors = ["Johannes Reitan"]
license = "MIT"
repository = "https://github.com/johankre/ToA-Particle-Filter"

[dependencies]
simulation = { path = "simulation" }
agents = { path = "agents" }
visualization = { path = "visualization" }
nalgebra = "0.33.2"

